2004-02-17  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/format_output.cpp: use "self/child" for header
	* libutil++/string_manip.cpp: format_percent() return "0" if
	  value == 0.0
	* libpp/callgraph_container.cpp: remove some dead code.

2004-02-16  Philippe Elie  <phil.el@wanadoo.fr>

	* module/compat24.h:
	* module/x86/cpu_type.c:
	* module/x86/op_apic.c:
	* module/x86/op_model_p4.c:
	* module/x86/op_nmi.c:
	* module/x86/op_x86_model.h: backport P4 HyperThreading support from
	   2.6 to 2.4.

2004-02-16  Philippe Elie  <phil.el@wanadoo.fr>

	* events/i386/p4/events:
	* events/i386/p4/unit_masks:
	* events/i386/p4-ht/events:
	* events/i386/p4-ht/unit_masks: fix MEMORY_COMPLETE unit mask

2004-02-15  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/profile.cpp: samples_range() throw if start > end

2004-02-15  Philippe Elie  <phil.el@wanadoo.fr>

	* events/ia64/itanium2/unit_masks: comments
	* utils/op_help.c: add --callgraph to sanitize min events count
	* utils/opcontrol: pass --callgraph to op_help

2004-02-15  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/oprofiled.c: send alarm() after fork not before, behavior
	  changed between 2.4 and 2.6 and according to posix 2.6 is right.

2004-02-15  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/op_help.c: output the default unit mask. when querying the
	  default mask output it in decimal not hexadecimal
	* libpp/op_header.cpp: event number must be output as integer not as
	  unsigned char type
	* libop/op_parse_event.c: clarify error message

	* libop/op_events.c: better validation of unit mask
	* events/ia64/itanium2/unit_masks:
	* events/x86-64/hammer/unit_masks: fix so make check pass, done through
	  documentation reading.


2004-02-13  Philippe Elie  <phil.el@wanadoo.fr>

	* events/i386/p4-ht/events: multiply all minimum count by two

2004-02-12  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_stats.c: handle new statistics added in callgraph patch

2004-02-11  Will Cohen  <wcohen@redhat.com>
