@@ -65,7 +65,8 @@ int opstack(vector<string> const & non_options)
 
 	callgraph_container cg_container;
 	cg_container.populate(iprofiles, options::extra_found_images,
-		options::debug_info, options::threshold);
+		options::debug_info, options::threshold,
+			      options::merge_by.lib);
 
 	column_flags output_hints = cg_container.output_hint();
 
